--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "type":"module",
   "scripts": {
-    "test:basic": "node --test 01-variables.test.js",
-    "test": "node --test  ./01-variables.test.js"
+    "test:basic": "node --test 03-functions.test.js",
+    "test": "node --test  ./03-functions.test.js"
   },
   "keywords": [],
   "author": "",
